# Cmake_Tutorial

./: README.md
HelloWorld/: CMakeLists.txt
Test02/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
Test03-count_lines/: CMakeLists.txt  main.cpp
Test04-Juce-Plugin/: CMakeLists.txt
